@@ -3,8 +3,11 @@ duicontrolpanel (0.7.17~unreleased) unstable; urgency=low
   * Fixes servicefw api regression
   * Deprecated classes: DcpButton*, DcpBriefWidget. MContentItem and
     MContentItem based DcpContentItem replaces them
+  * Fixes: false return at DcpWidget::back() was not taken into account (the
+    page got destroyed either ways)
+  * Adds API for closing the appletpage from DcpWidget
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 28 Apr 2010 10:39:54 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 04 May 2010 16:27:19 +0200
 
 duicontrolpanel (0.7.16) unstable; urgency=low
 
